Bug 152263 - Lock toolbars is lost after application restart
Summary: Lock toolbars is lost after application restart
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 154134 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-11-13 19:34 UTC by René Buffat
Modified: 2008-01-03 18:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description René Buffat 2007-11-13 19:34:39 UTC
Version:           svn from 2007-11-09 (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.1.2 

Tested with Konqueror and Dolphin after a removed .kde directory:

If you lock the toolbars and close the app, restart it, the toolbars aren't locked anymore.
Comment 1 Urs Wolfer 2007-12-17 19:01:27 UTC
*** Bug 154134 has been marked as a duplicate of this bug. ***
Comment 2 Germain Garand 2007-12-17 20:30:31 UTC
same problem applies to other toolbar settings 
(orientation, text position, icon size)
Comment 3 Germain Garand 2008-01-03 18:24:07 UTC
SVN commit 756739 by ggarand:

fix the "Lock/Unlock Toolbars" feature so that its state
is remembered accross application restart.

also fix a bug in KToolBar where the Lock/Unlock toggling in the toolbar
contextual menu would go out of sync from one toolbar to the other.

BUG:152263


 M  +15 -0     kmainwindow.cpp  
 M  +7 -6      ktoolbar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=756739