fix the "Lock/Unlock Toolbars" feature so that its state is remembered accross application restart.

also fix a bug in KToolBar where the Lock/Unlock toggling in the toolbar
contextual menu would go out of sync from one toolbar to the other.

BUG:152263

svn path=/trunk/KDE/kdelibs/; revision=756739